// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div>
  <div
    class="feature"
    data-testid="feature"
  >
    <img
      alt="Feature undefined"
      class="icon"
      src="undefined/resources/learningPath_icon.png"
    />
    <p
      class="text"
      data-testid="text"
    >
      Custom learning paths for different goals and skill levels
    </p>
  </div>
</div>
`;

exports[`should render the feature image with icon class name 1`] = `
<img
  alt="Feature undefined"
  class="icon"
  src="undefined/resources/learningPath_icon.png"
/>
`;
